--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -141,7 +141,6 @@
 .user-page-photos {
     /* display: block; */
     /* width: 100%; */
-    height: auto;
 }
 
 .image-overlay {
